CHANGE: Less flickering, on all platforms (tested on both windows and linux+GTK) [Gudy]
CHANGE: Azureus now responds as Server: Azureus <version> in tracker http comms [Parg]
CHANGE: Unwritten blocks in Pieces view shown in red [Gijs Overvliet]
CHANGE: Prioritizing first piece of file(s) now optional in config [Nolar]

BUGFIX: Problem with tracker not responding with "Connection: close" causing SSL session maintainance with HttpsURLConnection to stuff up and fail clients with "recv fail" [Parg]
BUGFIX: Fast resuming with Chinese directories: Bug #869749 [Parg]
BUGFIX: System tray icon re-shown after explorer.exe crash (again) [Rele]
BUGFIX: Fix for potential memory leaks [Nolar]
BUGFIX: Fix for stalled piece writing [Gijs Overvliet]
BUGFIX: Fix for .torrent file data not being fully written on shutdown [Parg]
BUGFIX: Fix for OutOfMemoryError in DiskManager: Bug #865553 [TuxPaper]





19.12.03 | Azureus 2.0.6.0

FEATURE: Intelligent Tracker Checking: optimizes tracker re-ask interval for quicker download speed ramp up [Nolar]
FEATURE: Azureus can now run all downloads off one shared incoming port: only need to open/forward one port in your firewall/NAT [Parg]
FEATURE: Drag-n-Drop moving of downloads in MyTorrents; moving of downloads in MyTorrents with Ctrl + Arrow-Up/Down [Rele]
FEATURE: Password protected access to tracker web and torrents [Parg]
FEATURE: GUI Update interval is configurable [Gudy]
FEATURE: Images update interval is configurable [Gudy]
FEATURE: Auto sort on tables possible, interval configurable [Gudy]
FEATURE: MyTorrents view can now be customized (choice of columns and order) [Gudy]
FEATURE: Added new columns to MyTorrents : 'Share Ratio', 'Downloaded', 'Uploaded', 'Health' [Gudy]
FEATURE: Details view can now be customized (choice of columns and order) [Gudy]
FEATURE: SSL now supported for tracker web and tracker updates [Parg]
FEATURE: Added Drag and Drop of URLs [Rele]
FEATURE: Multi-Trackers torrents can now be created/edited [Gudy]