@@ -11,6 +11,7 @@ CHANGE: Less flickering, on all platforms (tested on both windows and linux+GTK)
 CHANGE: Azureus now responds as Server: Azureus <version> in tracker http comms [Parg]
 CHANGE: Unwritten blocks in Pieces view shown in red [Gijs Overvliet]
 CHANGE: Prioritizing first piece of file(s) now optional in config [Nolar]
+CHANGE: Confirmation on data deletion now optional in config [Nolar]
 
 BUGFIX: Problem with tracker not responding with "Connection: close" causing SSL session maintainance with HttpsURLConnection to stuff up and fail clients with "recv fail" [Parg]
 BUGFIX: Fast resuming with Chinese directories: Bug #869749 [Parg]
